--- a/settings.json
+++ b/settings.json
@@ -31,8 +31,8 @@
   },
   "theme": {
     "mode": "system",
-    "light": "Gruvbox Light Soft",
-    "dark": "Gruvbox Dark Soft"
+    "light": "Dracula Light (Alucard)",
+    "dark": "Dracula"
   },
   "terminal": {
     "detect_venv": {
