--- a/settings.json
+++ b/settings.json
@@ -1,45 +1,43 @@
 {
-  "notification_panel": {
-    "dock": "left"
+  "ui_font_family": "JetBrains Mono",
+  "ui_font_size": 16,
+  "buffer_font_family": "JetBrains Mono",
+  "buffer_font_size": 16,
+
+  "vim_mode": true,
+  "vim": {
+    "use_system_clipboard": "on_yank"
   },
-  "chat_panel": {
-    "dock": "left"
+
+  "remove_trailing_whitespace_on_save": true,
+
+  "features": {
+    "edit_prediction_provider": "none"
   },
-  "outline_panel": {
-    "dock": "right"
+
+  "git": {
+    "git_gutter": "hide"
   },
+
   "project_panel": {
     "dock": "right"
   },
-  "telemetry": {
-    "diagnostics": false,
-    "metrics": false
-  },
-  "ui_font_family": "JetBrains Mono",
-  "buffer_font_family": "JetBrains Mono",
-  "ui_font_size": 16,
-  "buffer_font_size": 16,
-  "base_keymap": "VSCode",
-  "vim_mode": true,
-  "relative_line_numbers": "enabled",
-  "auto_install_extensions": {
-    "dart": true,
-    "git-firefly": true,
-    "ruff": true,
-    "xcode-themes": true,
-    "toml": true
-  },
+
   "theme": {
     "mode": "system",
-    "light": "Dracula Light (Alucard)",
-    "dark": "Dracula"
+    "light": "Gruvbox Material Light",
+    "dark": "Gruvbox Material Dark"
   },
-  "terminal": {
-    "detect_venv": {
-      "on": {
-        "directories": [".env", "env", ".venv", "venv"],
-        "activate_script": "default"
-      }
+
+  "languages": {
+    "Go": {
+      "tab_size": 8,
+      "formatter": "language_server",
+      "wrap_guides": [100]
     }
+  },
+
+  "inlay_hints": {
+    "enabled": true
   }
 }
